1. DayLight Theme Module Added.

--- a/daylighttheme/src/main/res/values/colors.xml
+++ b/daylighttheme/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-
-    <color name="daynight_textcolor">#6CBABB</color>
+    <color name="daynight_textColor">#6CBABB</color>
     <color name="switchColor">#911DEE</color>
 </resources>
